--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,44 @@
+#root {
+  background-color: black;
+  color: white;
+}
 .search-results {
   display: flex;
   flex-wrap: wrap;
   width: 80vw;
   height: auto;
+  margin: 5vw auto 5vw auto;
+  padding: 30px;
   border: 2px solid yellow;
+}
+.artist-result {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-width: 10vw;
+  height: 10vh;
+  padding: 5px;
+  margin: 10px;
+  border: 1px solid blue;
+}
+.artist-button {
+  font-size: 2vw;
+  font-weight: bold;
+  font-family: sans-serif;
+  cursor: pointer;
+}
+.artist-button:hover {
+  text-decoration: underline;
+  color: transparent;
+  -webkit-text-stroke: 2px white;
+}
+@supports not(-webkit-text-stroke: 2px white) {
+  a:hover {
+    text-shadow:
+      3px 3px 0 white,
+      -1px -1px 0 white,
+      1px -1px 0 white,
+      -1px 1px 0 white,
+      1px 1px 0 white;
+  }
 }
